Kubernetes/Hands-On 10 — Route Traffic Like a Pro/app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: ingress-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: app-b
          image: hashicorp/http-echo:latest
          args:
            - "-text=Hello from App B"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: ingress-lab
spec:
  selector:
    app: app-b
  ports:
    - port: 80
      targetPort: 5678
